# CoolEngine

./: .gitignore  CoolRender.sln  CoolRender.vcxproj  CoolRender.vcxproj.filters  LICENSE  README.md  Raytracer.cpp  Raytracer.h  Shader.cpp  Shader.h  framebuffer.tga  geometry.cpp  geometry.h  output - 副本.tga  output.tga
raytracer1/: common.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  surface.cpp  surface.h  testapp.cpp  testapp.h
render/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMaterail.cpp  CMaterail.h  Camera.cpp  Camera.h  CoolEngine.sln  CoolEngine.vcxproj  CoolEngine.vcxproj.filters  CoolRenerMain.cpp  Lights.cpp  Lights.h  LineDrawTest.h  Model.cpp  Model.h  Pipline.cpp  Pipline.h  Primitive.cpp  Primitive.h  Raytracer.cpp  Raytracer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShadingCalculate.cpp  ShadingCalculate.h  TriangleDrawTest.h  UObject.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmakeDo.bat  cmake_install.cmake  geometry.cpp  geometry.h  macro.h  makeExe.bat  mathTest.h  (+13 more)
render/include/: Pipline.h  Shader.h  ShadingCalculate.h  TriangleDrawTest.h  geometry.h  mathTest.h  maths.h
render/scripts/: CMakeLists.txt  CMaterail.cpp  Camera.cpp  CoolRenerMain.cpp  Model.cpp  Pipline.cpp  Scene.cpp  Shader.cpp  ShadingCalculate.cpp  geometry.cpp  private.cpp  renderMath.cpp  skeleton.cpp  tgaimage.cpp
render/scripts/include/: CMaterail.h  Camera.h  Lights.h  Model.h  Pipline.h  Scene.h  Shader.h  ShadingCalculate.h  geometry.h  renderMath.h  tgaimage.h
